--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.19.0
   image_picker: ^1.1.2
+  shared_preferences: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +58,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
   assets:
     - images/
     - images/bank/
@@ -67,7 +69,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+      - family: Inter
+        fonts:
+          - asset: fonts/Inter-VariableFont_opsz,wght.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
